--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "history": "^5.0.0",
     "react-router-dom": "^5.2.0"
   }
 }
