--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-scripts": "4.0.3",
+    "status-indicator": "^1.0.9",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
