--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "qs": "^6.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
     "react-pagination": "^1.0.0",
