--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.1",
     "qs": "^6.7.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
